--- a/popup.html
+++ b/popup.html
@@ -31,41 +31,52 @@
       </div>
       <div class="wrap">
         <button class="btn" id="aries" >
-            <img src="./img/aries.png" alt="Овен">
+            <img src="./img/aries.png" alt="aries">
             <span data-localize="aries"></span>
         </button>
         <button class="btn" id="taurus">
-            <img src="./img/taurus.png" alt="Телец"> Телец
+            <img src="./img/taurus.png" alt="taurus">
+            <span data-localize="taurus"></span>
         </button>
         <button class="btn" id="gemini">
-            <img src="./img/gemini.png" alt="Близнецы"> Близнецы
+            <img src="./img/gemini.png" alt="gemini">
+            <span data-localize="gemini"></span>
         </button>
         <button class="btn" id="cancer">
-            <img src="./img/cancer.png" alt="Рак"> Рак
+            <img src="./img/cancer.png" alt="cancer">
+            <span data-localize="cancer"></span>
         </button>
         <button class="btn" id="leo">
-            <img src="./img/leo.png" alt="Лев"> Лев
+            <img src="./img/leo.png" alt="leo">
+            <span data-localize="leo"></span>
         </button>
         <button class="btn" id="virgo">
-            <img src="./img/virgo.png" alt="Дева"> Дева
+            <img src="./img/virgo.png" alt="virgo">
+            <span data-localize="virgo"></span>
         </button>
         <button class="btn" id="libra">
-            <img src="./img/libra.png" alt="Весы"> Весы
+            <img src="./img/libra.png" alt="libra">
+            <span data-localize="libra"></span>
         </button>
         <button class="btn" id="scorpio">
-            <img src="./img/scorpio.png" alt="Скорпион"> Скорпион
+            <img src="./img/scorpio.png" alt="scorpio">
+            <span data-localize="scorpio"></span>
         </button>
         <button class="btn" id="sagittarius">
-            <img src="./img/sagittarius.png" alt="Стрелец"> Стрелец
+            <img src="./img/sagittarius.png" alt="sagittarius">
+            <span data-localize="sagittarius"></span>
         </button>
         <button class="btn" id="capricorn">
-            <img src="./img/capricorn.png" alt="Козерог"> Козерог
+            <img src="./img/capricorn.png" alt="capricorn">
+            <span data-localize="capricorn"></span>
         </button>
         <button class="btn" id="aquarius">
-            <img src="./img/aqua.png" alt="Водолей"> Водолей
+            <img src="./img/aqua.png" alt="aquarius">
+            <span data-localize="aquarius"></span>
         </button>
         <button class="btn" id="pisces">
-            <img src="./img/pisces.png" alt="Рыбы"> Рыбы
+            <img src="./img/pisces.png" alt="pisces">
+            <span data-localize="pisces"></span>
         </button>
         <div class="article">
             <div class="article__wrap">
