--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,7 @@
   </head>
   <body>
       <h1 class="title" data-localize="appName"></h1>
+      <p class="dateDescription"></p>
       <div class="burger">
         <div>
 
