--- a/static/index.html
+++ b/static/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>еуые</title>
+    <title></title>
   </head>
   <body>
-<h1>Test</h1>
   </body>
 </html>
