--- a/static/welcome/index.html
+++ b/static/welcome/index.html
@@ -10,10 +10,10 @@
             <h1>Horoscope has been installed 🎉</h1>
 
             <h2>1. Pin the Horoscope extension for easy access</h2>
-            <img src="instruction1.png" />
+            <img src="/welcome/instruction1.png" />
 
             <h2>2. Click on the extension icon to open the Horoscope</h2>
-            <img src="instruction2.png" />
+            <img src="/welcome/instruction2.png" />
 
 
             <div class="tip">
